# doorbell

./: .env.sample  Makefile  README.md  config.json.sample  doorbell.service  install.py  install_service.py  main.py  pyproject.toml  pysip_server.py  test_sip_client.py  uninstall.py  uninstall_service.py
doorbell/: __init__.py  main.py  test_doorbell.py  test_sip_audio_client.py
