[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doorbell"
version = "0.1.0"
description = "Raspberry Pi doorbell system with SIP calling and video streaming"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Bernhard Rode", email = "bernhard@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "rpi-lgpio>=0.6",
    "uvicorn>=0.35.0",
    "aiortc>=1.9.0",
    "starlette>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/bernhardrode/doorbell"
Repository = "https://github.com/bernhardrode/doorbell"
Issues = "https://github.com/bernhardrode/doorbell/issues"

[project.scripts]
doorbell = "doorbell.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
